# LLM_Agent

./: .gitignore  README.md  Specs_roadmap.md  pyproject.toml  run.py
core/: __init__.py  cli.py  llm.py  orchestrator.py  pipeline_loader.py  prompt_service.py
pipelines/: book_outline.json
server/: __init__.py  main.py
templates/: book_outline.j2
tools/: __init__.py  pipeline_visualizer.py  plan.py
ui/: index.html  package.json  tsconfig.json
ui/src/: App.tsx  styles.css
