[project]
name = "llm-agent"
version = "0.1.0"
description = "Local-first agent pipeline orchestrator"
authors = [{name = "LLM Agent Team"}]
requires-python = ">=3.13"
dependencies = [
    "jinja2"
]

[project.scripts]
agent = "core.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
